--- a/wp-content/languages/buddypress-en_US.po
+++ b/wp-content/languages/buddypress-en_US.po
@@ -8,7 +8,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2012-04-12 16:11-0500\n"
+"PO-Revision-Date: 2012-04-19 12:24-0500\n"
 "Last-Translator: Jay Collier <jay.collier@thecompass.com>\n"
 "Language-Team: Learn Maine\n"
 "X-Poedit-Language: English\n"
@@ -1858,7 +1858,7 @@ msgstr ""
 
 #: bp-groups/bp-groups-loader.php:321
 msgid "Forum"
-msgstr "Discussion"
+msgstr "Discussions"
 
 #: bp-groups/bp-groups-loader.php:333
 msgid "Members <span>%s</span>"
@@ -2173,7 +2173,7 @@ msgstr "Discussion posts cannot be empty. Please enter some text."
 
 #: bp-groups/bp-groups-screens.php:351
 msgid "This group does not have a forum setup yet."
-msgstr "This group does not have a discussion set up yet."
+msgstr "This group does not have a discussion forum set up yet."
 
 #: bp-groups/bp-groups-screens.php:358
 #: bp-forums/bp-forums-screens.php:45
@@ -4471,7 +4471,7 @@ msgstr "Sorry, there were no discussion topics found."
 #: bp-themes/bp-default/groups/single/forum/topic.php:16
 #: bp-themes/bp-default/groups/single/forum.php:23
 msgid "Forum Directory"
-msgstr "Discussion Directory"
+msgstr "Discussions Directory"
 
 #: bp-themes/bp-default/forums/single/edit.php:25
 #: bp-themes/bp-default/groups/single/forum/edit.php:25
