--- a/wp-content/plugins/query-multiple-taxonomies/lang/query-multiple-taxonomies-de_DE.po
+++ b/wp-content/plugins/query-multiple-taxonomies/lang/query-multiple-taxonomies-de_DE.po
@@ -2,74 +2,80 @@
 # This file is distributed under the same license as the  package.
 msgid ""
 msgstr ""
-"Project-Id-Version:  \n"
+"Project-Id-Version: Query Multiple Taxonomies 1.1-beta\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/qmt\n"
 "POT-Creation-Date: 2011-06-07 12:03:39+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2010-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2011-12-01 16:24+0100\n"
+"Last-Translator: André Bonhôte <andre@bonhote.org>\n"
+"Language-Team: Andre Bonhote <andre@bonhote.org>\n"
+"Plural-Forms: nplurals=2; plural=(n>1 || n==0)\n"
+"X-Poedit-Language: German\n"
+"X-Poedit-Country: Germany\n"
+"X-Poedit-SourceCharset: utf8\n"
 
 #: widget.php:59
 msgid "Title:"
-msgstr ""
+msgstr "Titel:"
 
 #: widget.php:70
 msgid "lists"
-msgstr ""
+msgstr "Listen"
 
 #: widget.php:72
 msgid "dropdowns"
-msgstr ""
+msgstr "Dropdowns"
 
 #: widget.php:75
 msgid "Mode:"
-msgstr ""
+msgstr "Modus:"
 
 #: widget.php:80
 msgid "Taxonomies:"
-msgstr ""
+msgstr "Taxonomien:"
 
 #: widget.php:101
 msgid "Post type: %s"
 msgid_plural "Post types: %s"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Post-Typ: %s"
+msgstr[1] "Post-Typen: %s"
 
 #: widget.php:128
 msgid "No taxonomies selected!"
-msgstr ""
+msgstr "Keine Taxonomie ausgewählt!"
 
 #: widget.php:161
 msgid "Remove selected terms in group"
-msgstr ""
+msgstr "Ausgewählte Schlagworte entfernen"
 
 #: widget.php:174
 msgid "Submit"
-msgstr ""
+msgstr "Absenden"
 
 #: widget.php:204
 msgid "Reset"
-msgstr ""
+msgstr "Zurücksetzen"
 
 #: widget.php:268
 msgid "Add term"
-msgstr ""
+msgstr "Schlagwort hinzufügen"
 
 #: widget.php:274
 msgid "Remove term"
-msgstr ""
+msgstr "Schlagwort entfernen"
 
 #: scb/AdminPage.php:165
 msgid "Settings <strong>saved</strong>."
-msgstr ""
+msgstr "Einstellungen <strong>gespeichert</strong>."
 
-#: scb/AdminPage.php:177 scb/AdminPage.php:187
+#: scb/AdminPage.php:177
+#: scb/AdminPage.php:187
 msgid "Save Changes"
-msgstr ""
+msgstr "Änderungen speichern"
 
 #: scb/AdminPage.php:369
 msgid "Settings"
-msgstr ""
+msgstr "Einstellungen"
+
